# llm-forge

./: .gitignore  dev.ipynb  pyproject.toml
src/llm_forge/config/: gpt2.py
src/llm_forge/data/: loader.py
src/llm_forge/gpt2/: data.py
src/llm_forge/inference/: generate.py
src/llm_forge/models/: gpt2.py
src/llm_forge/trainer/: config.py  evaluate.py  train.py
src/models/gpt2/: data.py  inference.py  model.py  train.py
