[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-forge"
version = "0.1.0"
description = "Training and experimenting with LLMs"
requires-python = ">=3.11"
dependencies = [
    "torch >= 2.11",
    "numpy",
    "matplotlib",
    "tqdm",
]

[tool.setuptools]
package-dir = {""="src"}

[tool.setuptools.packages.find]
where = ["src"]

