[project]
name = "llm-forge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.5.1",
    "torch>=2.13.0",
    "transformers>=5.13.0",
    "wandb>=0.28.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
